Update GlobalRuntimeImpl.java